--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
   "author": "John Hofland <john.hofland@outlook.com> (http://hyseh.dev/)",
   "license": "MIT",
   "scripts": {
-    "format": "prettier -w src/**/*.js"
+    "format": "prettier -w src/**/*.js",
+    "lint": "eslint src/**/*.js",
+    "lint-fix": "eslint src/**/*.js --cache --fix"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/hyseh/semester-project-2.git"
   },
   "devDependencies": {
+    "eslint": "^8.54.0",
     "prettier": "^3.1.0"
   }
 }
