--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "John Hofland <john.hofland@outlook.com> (http://hyseh.dev/)",
   "license": "MIT",
   "scripts": {
+    "build": "postcss ./src/css/main.css -o ./dist/css/main.css",
     "format": "prettier -w src/**/*.js",
     "lint": "eslint src/**/*.js",
     "lint-fix": "eslint src/**/*.js --cache --fix"
@@ -16,7 +17,10 @@
     "url": "https://github.com/hyseh/semester-project-2.git"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.54.0",
-    "prettier": "^3.1.0"
+    "postcss-cli": "^10.1.0",
+    "prettier": "^3.1.0",
+    "tailwindcss": "^3.3.5"
   }
 }
