--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "scripts": {
     "build": "postcss ./src/css/main.css -o ./dist/css/main.css",
+    "start": "postcss ./src/css/main.css -o ./dist/css/main.css -w & live-server",
     "format": "prettier -w src/**/*.js",
     "lint": "eslint src/**/*.js",
     "lint-fix": "eslint src/**/*.js --cache --fix"
@@ -19,6 +20,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.16",
     "eslint": "^8.54.0",
+    "live-server": "^1.2.2",
     "postcss-cli": "^10.1.0",
     "prettier": "^3.1.0",
     "tailwindcss": "^3.3.5"
