--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "postcss ./src/css/main.css -o ./dist/css/main.css -w & live-server",
     "format": "prettier -w src/**/*.js",
     "lint": "eslint src/**/*.js",
-    "lint-fix": "eslint src/**/*.js --cache --fix"
+    "lint-fix": "eslint src/**/*.js --cache --fix",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,8 @@
     "autoprefixer": "^10.4.16",
     "dotenv": "^16.3.1",
     "eslint": "^8.54.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.1.0",
     "live-server": "^1.2.2",
     "postcss-cli": "^10.1.0",
     "prettier": "^3.1.0",
