--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "live-server": "^1.2.2",
     "postcss-cli": "^10.1.0",
     "prettier": "^3.1.0",
+    "prettier-plugin-tailwindcss": "^0.5.7",
     "tailwindcss": "^3.3.5"
   }
 }
